--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 ## spring boot endpoint
-server.address=localhost
+server.address=127.0.0.1
 server.port=8080
 
 cxf.path=/rest
@@ -7,7 +7,13 @@ cxf.path=/rest
 # kie-server
 kieserver.serverId=kie-server-project01
 kieserver.serverName=kie-server-project01
-kieserver.location=http://${server.address}:${server.port}${cxf.path}/server
+kieserver.location=http://127.0.0.1:8080/rest/server
+
+kieserver.username=kieserver
+kieserver.password=password
+
+# url for BusinessCentral
+kieserver.controllers=ws://127.0.0.1:8090/business-central/websocket/controller
 
 kieserver.drools.enabled=true
 kieserver.dmn.enabled=true
@@ -37,3 +43,9 @@ spring.jta.narayana.transaction-manager-id=1
 
 narayana.dbcp.enabled=true
 narayana.dbcp.maxTotal=20
+
+# kjar
+kjar.name=project01
+kjar.groupid=com.edw
+kjar.artifactid=Project01
+kjar.version=1.6.0
